fix: resolve lint errors, env config, and CI workflow issues
- Fix 12 ESLint errors (setState in effects, unused vars, impure function in useMemo)
- Fix .env.development/.env.production overriding real keys with placeholders
- Add Sentry ErrorBoundary fallback when DSN is not configured
- Soften config validation to warn instead of throw in development
- Update dependabot.yml to ignore major version bumps for core deps
- Add FIREBASE_TOKEN guard in preview deployment workflow

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,17 @@ updates:
         update-types:
           - 'minor'
           - 'patch'
+    ignore:
+      - dependency-name: 'react'
+        update-types: ['version-update:semver-major']
+      - dependency-name: 'react-dom'
+        update-types: ['version-update:semver-major']
+      - dependency-name: 'react-leaflet'
+        update-types: ['version-update:semver-major']
+      - dependency-name: 'firebase'
+        update-types: ['version-update:semver-major']
+      - dependency-name: 'tailwindcss'
+        update-types: ['version-update:semver-major']
 
   - package-ecosystem: 'github-actions'
     directory: '/'
