--- a/.github/workflows/firebase-preview.yml
+++ b/.github/workflows/firebase-preview.yml
@@ -35,7 +35,18 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools@13
 
+      - name: Check Firebase token
+        id: check-token
+        run: |
+          if [ -z "${{ secrets.FIREBASE_TOKEN }}" ]; then
+            echo "has_token=false" >> $GITHUB_OUTPUT
+            echo "⚠️ FIREBASE_TOKEN not configured. Skipping preview deployment."
+          else
+            echo "has_token=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Create Firebase Hosting preview
+        if: steps.check-token.outputs.has_token == 'true'
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         id: preview
@@ -43,14 +54,15 @@ jobs:
           CHANNEL_ID="pr-${{ github.event.pull_request.number }}"
           OUTPUT=$(firebase hosting:channel:deploy "$CHANNEL_ID" --token "$FIREBASE_TOKEN" --expires 7d 2>&1)
           echo "$OUTPUT"
-          
+
           PROJECT_ID=$(cat .firebaserc | jq -r '.projects.default')
           PREVIEW_URL=$(echo "$OUTPUT" | grep -oP 'https://[^[:space:]]+\.web\.app' | head -1 || echo "https://$CHANNEL_ID--$PROJECT_ID.web.app")
-          
+
           echo "preview_url=$PREVIEW_URL" >> $GITHUB_OUTPUT
           echo "channel_id=$CHANNEL_ID" >> $GITHUB_OUTPUT
 
       - name: Comment on PR with preview URL
+        if: steps.check-token.outputs.has_token == 'true'
         uses: actions/github-script@v7
         with:
           script: |
@@ -59,13 +71,13 @@ jobs:
               repo: context.repo.repo,
               issue_number: context.issue.number,
             });
-            
+
             const botComment = comments.find(comment => 
               comment.user.type === 'Bot' && comment.body.includes('Preview Deployment')
             );
-            
+
             const body = `## 🔍 Preview Deployment\n\nA preview deployment has been created for this PR.\n\n**Preview URL:** ${{ steps.preview.outputs.preview_url }}\n**Expires:** 7 days\n\n---\n*This preview will be automatically cleaned up when the PR is closed.*`;
-            
+
             if (botComment) {
               await github.rest.issues.updateComment({
                 owner: context.repo.owner,
@@ -94,7 +106,18 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools@13
 
+      - name: Check Firebase token
+        id: check-token
+        run: |
+          if [ -z "${{ secrets.FIREBASE_TOKEN }}" ]; then
+            echo "has_token=false" >> $GITHUB_OUTPUT
+            echo "⚠️ FIREBASE_TOKEN not configured. Skipping cleanup."
+          else
+            echo "has_token=true" >> $GITHUB_OUTPUT
+          fi
+
       - name: Delete Firebase Hosting preview channel
+        if: steps.check-token.outputs.has_token == 'true'
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
@@ -102,6 +125,7 @@ jobs:
           firebase hosting:channel:delete "$CHANNEL_ID" --token "$FIREBASE_TOKEN" -f || true
 
       - name: Comment on PR
+        if: steps.check-token.outputs.has_token == 'true'
         uses: actions/github-script@v7
         with:
           script: |
