--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -47,6 +47,8 @@ updates:
         update-types: ['version-update:semver-major']
       - dependency-name: '@eslint/js'
         update-types: ['version-update:semver-major']
+      - dependency-name: 'date-fns'
+        update-types: ['version-update:semver-major']
 
   - package-ecosystem: 'github-actions'
     directory: '/'
