feat: implement P0 offline support, push notifications, and server-side rate limiting
This commit implements critical features for a disaster reporting application,
ensuring functionality during network outages and enabling real-time alerts.

## P0 Features

### 1. Service Worker + Offline Support
- Enhanced service worker with IndexedDB-based offline queue for failed requests
- Added background sync for pending operations when connectivity restores
- Implemented push notification handling in service worker
- Added offline/online detection with UI feedback via OfflineIndicator component

### 2. Server-side Rate Limiting via Firebase Cloud Functions
- Created Firebase Cloud Functions for server-enforced rate limiting
- Implemented Firestore-based rate limit tracking per user per action type
- Added scheduled cleanup function for expired rate limit entries
- Rate limits: reports (10/hr), updates (20/hr), uploads (30/hr), comments (50/hr)

### 3. Push Notifications via Firebase Cloud Messaging
- Added usePushNotifications hook for FCM token management
- Created NotificationSettings component for municipality-based subscriptions
- Implemented Cloud Functions for topic subscriptions and notification sending
- Auto-notifications on new reports and verification status changes

## P1 Features

### 4. Firestore Offline Persistence
- Enabled IndexedDB persistence with unlimited cache size
- Created useFirestorePersistence hook for persistence state management

### 5. Accessibility Improvements
- Added useAccessibility hooks: useReducedMotion, useFocusTrap, useFocusManagement, useAnnounce
- Created A11yProvider with skip link, screen reader announcer, reduced motion handling
- Added CSS for reduced motion preferences and high contrast mode support
- Implemented focus-visible styles for keyboard navigation

## New Files
- functions/index.js - Rate limiting Cloud Functions
- functions/notifications.js - FCM notification Cloud Functions
- functions/package.json - Functions depend

--- a/firebase.json
+++ b/firebase.json
@@ -9,6 +9,10 @@
       "rules": "storage.rules"
     }
   ],
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs20"
+  },
   "hosting": {
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
